--- a/templates/director/assign_counselor.html
+++ b/templates/director/assign_counselor.html
@@ -129,7 +129,7 @@ Assign Counselor
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: bolder;
-  color: #000;
+  color: #fff;
   background-color: #d8c090;
   border: none;
   border-radius: 8px;
