--- a/templates/director/director_degree_program.html
+++ b/templates/director/director_degree_program.html
@@ -138,7 +138,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #000;
+color: #fff;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
@@ -161,7 +161,7 @@ text-shadow: 1px 1px 1px #fff;
     
 
 <div class="fac">
-    <button type="submit" class="buttonF">List of Degreem program</button>
+    <button type="submit" class="buttonF">List of Degree program</button>
   </div> 
   <br> <br>
 <div class="table-wrapper">
@@ -169,7 +169,7 @@ text-shadow: 1px 1px 1px #fff;
       <thead>
       <tr>
           <th class="parent_tr">Program Code</th>
-          <th class="parent_tr">Program NamedExpressions</th>
+          <th class="parent_tr">Program Name</th>
       </tr>
       </thead>
       {% for form in degree %}
