--- a/templates/director/director_home.html
+++ b/templates/director/director_home.html
@@ -611,7 +611,7 @@ margin-left: 100px; */
                                 <span class="nav__name">Statistic</span>
                             </a> -->
                                        <div class="nav__dropdown">
-                                <a href="{% url 'view_stats' %}"class="nav__link">
+                                <a href="#"class="nav__link">
                                     <i class='bx bx-navigation nav__icon' ></i>
                                     <span class="nav__name">Statistic</span>
                                     <i class='bx bx-chevron-down nav__icon nav__dropdown-icon'></i>
