--- a/templates/teacher/list_students.html
+++ b/templates/teacher/list_students.html
@@ -197,7 +197,7 @@ td.text-right {
 <tr>
 <td class="text-left">{{object.studnumber}}</td>
 <td class="text-left">{{object.firstname}}, &nbsp; {{object.lastname}}</td>
-<td class="text-center"><a href="{% url 'new' object.studnumber id %}"><button type="submit" class="button">View Info</button></a></td>
+<td class="text-center"><a href="{% url 'new' object.studnumber id %}"><button type="submit" class="button">Refer Student</button></a></td>
 
 </tr>
 </tbody>
