--- a/templates/director/director_counselor.html
+++ b/templates/director/director_counselor.html
@@ -142,32 +142,6 @@ Assign Counselor
     height: 35px;
     color: #3A3B3C;
   }
-  
-  .button {
-    margin: 0 auto;
-    width: 96px;
-    height: 27px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: #fff;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-    }
-  
-    .button:hover {
-    background-color: #95B9C7;
-    box-shadow: 0px 15px 20px #C9C0BB;
-    color: #fff;
-  }
-  
   /* Table Styles */
   
   .table-wrapper{
@@ -298,7 +272,7 @@ Assign Counselor
 
 .button {
   margin: 0 auto;
-  width: 140px;
+  width: 9.5vw;
   height: 30px;
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
@@ -347,7 +321,7 @@ Assign Counselor
         <tr>
           <td><p class="table_words"><b>{{object.lastname}}, &nbsp; {{object.firstname}}</b></p></td>
           <td>
-            <a href="{% url 'view_stat_by_counselor' object.employee_id %}"><button type="submit" class="button"><b>View Stat</b></button></a>
+            <a href="{% url 'view_stat_by_counselor' object.employee_id %}"><button type="submit" class="button"><b>View Statistics</b></button></a>
           </td>
         
       </tr>
