--- a/templates/director/form.html
+++ b/templates/director/form.html
@@ -88,7 +88,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: bolder;
-color: #000;
+color: #fff;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
