--- a/templates/director/view_stat_by_counselor.html
+++ b/templates/director/view_stat_by_counselor.html
@@ -137,7 +137,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 1.5px;
 font-weight: 600;
-color: #000;
+color: #fff;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
@@ -159,18 +159,135 @@ text-shadow: 1px 1px 1px #fff;
 .introduction{
   font-size: 19px;
 }
+.chooseDate{
+    width:fit-content;
+    height: 10vh;
+    padding: 12px;
+    border-radius: 12px;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+    background: whitesmoke;
+    margin-left: 3vh;
+}
+.chooseTitle{
+     /* width:fit-content;
+    height: 8vh;    */
+}
+.chooseFromTo{
+    display: flex;
+    flex-direction: row;
+       gap: 4.5vw;
+}
+.chooseTheDate{
+            display: flex;
+    flex-direction: row;
+    gap: 15px;
+}
+.statistic_date{
+   margin:0 auto;
+   padding:0 auto;
+   width:fit-content;
+}
+.button {
+  width: 98px;
+  height: 30px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #98b4ac;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  }
+
+.button:hover {
+  background-color: #d8c090;
+  box-shadow: 0px 15px 20px #C9C0BB;
+  color: #fff;
+  transform: translateY(-7px);
+}
+#id_pickedStartDate{
+    height: 3vh;
+}
+#id_pickedEndDate{
+    height: 3vh;
+}
+
+.center_title{
+    font-size: 18px;
+}
+.dataTitle{
+    margin-left: 31vw;
+    display: flex;
+    flex-direction: row;
+}
+.data{
+        width: fit-content;
+    padding: 12px;
+    border-radius: 12px;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+    background: whitesmoke;
+    margin-bottom: 1vh;
+    margin-left: 1vh;
+     margin-right: 1vh;
+     font-size: 20px;
+}
 </style>
     
 
 <div class="fac">
     <button type="submit" class="buttonF">List of Students Reffered under this Counselor</button>
   </div> 
-        <br> <br>
-      <div class="introduction"> 
-  <i><h3>{{stat}} refer data in this department plastara words piff</h3></i>
-</div>
+        <br> 
+  
+              <form method="POST" action="{% url 'view_stat_by_counselor_with_date' counselor %}">
+          {% csrf_token %}
+          <div class="statistic_date">
+                    <div class="center_title">
+        <p><i><h4>To view Record of Statistics, select the date below.</h4></i></p>
+      </div>
+      <div class="chooseDate">
+                <div class="chooseFromTo">
+          <div>
+              <b> From</b>
+          </div>
+          <div>
+              <b> To</b>
+          </div>
+      </div>
+      <div class="chooseTheDate">
+          <div>
+              {{filterDate.pickedStartDate}}
+          </div>
+          <div>
+              {{filterDate.pickedEndDate}}
+          </div>
+          <div>
+              <button type="submit" class="button">OK</button>
+          </div>
+      </div>
+      </div>
+          </div>
+      </form>
 
-<br>
+<br> <br> <br> <br>
+          <div class="dataTitle">
+                 <div style="margin-top: 1vh;"><i><h3>There &nbsp; are </h3></i></div>
+                 <div class="data">
+                    <b>{{stat}}</b>
+                 </div>
+                  <div style="margin-top: 1vh;">
+                      <i><h3>referred &nbsp; Students &nbsp; under</h3></i>
+                  </div>
+                   <div class="data">
+                    <b>{{couns.firstname}} {{couns.lastname}}</b>
+                 </div>
+          </div>
 <div class="table-wrapper">
   <table class="fl-table">
       <thead>
