--- a/templates/director/view_stat_by_degree_program_with_date.html
+++ b/templates/director/view_stat_by_degree_program_with_date.html
@@ -138,7 +138,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 1.5px;
 font-weight: 600;
-color: #ffff;
+color: #fff;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
@@ -146,7 +146,6 @@ box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
-
   }
   .parent_tr{
      font-size: 17px;
@@ -197,17 +196,18 @@ text-shadow: 1px 1px 1px #fff;
   letter-spacing: 2.5px;
   font-weight: 500;
   color: #000;
-  background-color: #98b4ac;
+  background-color: #95B9C7;
   border: none;
   border-radius: 45px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
+
   }
 
 .button:hover {
-  background-color: #d8c090;
+  background-color: #95B9C7;
   box-shadow: 0px 15px 20px #C9C0BB;
   color: #fff;
   transform: translateY(-7px);
@@ -219,7 +219,7 @@ text-shadow: 1px 1px 1px #fff;
     height: 3vh;
 }
 .dataTitle{
-    margin-left: 33.5vw;
+    margin-left: 24vw;
         display: flex;
     flex-direction: row;
 }
@@ -237,12 +237,13 @@ text-shadow: 1px 1px 1px #fff;
 
 </style>
 <div class="fac">
-    <button type="submit" class="buttonF">List of Students Reffered in this Department</button>
+    <button type="submit" class="buttonF">List of Students Reffered in this Department wih Date</button>
   </div> 
-  <br>
+        <br>
       <div class="introduction"> 
  <form method="POST" action="{% url 'view_stat_by_degree_program_with_date' degree %}">
           {% csrf_token %}
+          <!-- {{offer.pickedStartDate}}  {{offer.pickedEndDate}} -->
           <div class="statistic_date">
                     <div class="center_title">
         <p><i><h4>To view Record of Statistics, select the date below.</h4></i></p>
@@ -274,20 +275,26 @@ text-shadow: 1px 1px 1px #fff;
 <br> <br>
 
           <div class="dataTitle">
-                 <div style="margin-top: 1vh;"><i><h3>There &nbsp; are </h3></i></div>
+                 <div style="margin-top: 1vh;"><i><h3>There are </h3></i></div>
                  <div class="data">
                     <b>{{stat}}</b>
                  </div>
                   <div style="margin-top: 1vh;">
-                      <i><h3>referred &nbsp; Students &nbsp; in this &nbsp; Program kuhaa ang program</h3></i>
+                      <i><h3>referred <b>Students</b> in this Program </h3></i>
                   </div>
+                  <div style="margin-top: 1vh; margin-left: 1vh;"><i><h3>from</h3></i></div>
+                                 <div class="data">
+                    <b>{{start}}</b>
+                 </div>
+                  <div style="margin-top: 1vh;"><i><h3>to</h3></i></div>
+                                                  <div class="data">
+                    <b>{{end}}</b>
+                 </div>
           </div>
-          
 <div class="table-wrapper">
   <table class="fl-table">
       <thead>
       <tr>
-
           <th class="parent_tr">Lastname</th>
           <th class="parent_tr">Firstname</th>
            <th class="parent_tr">Date Reffered</th>
