--- a/templates/student/schedule.html
+++ b/templates/student/schedule.html
@@ -105,7 +105,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #000;
+color: #fff;
 background-color: #d8c090;
 border: none;
 border-radius: 45px;
@@ -131,7 +131,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #000;
+color: #fff;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
@@ -211,6 +211,9 @@ outline: none;
 }
 .schedule-intro{
   font-size: 18px;
+}
+#id_reasons{
+  font-size: 22px;
 }
 </style>
   <div class="fac">
