--- a/templates/counselor/another_sched.html
+++ b/templates/counselor/another_sched.html
@@ -316,7 +316,7 @@ font-size: 18px;
               <tr>
                 <th class="table_head">Schedule Time</th>
                 <th class="table_head">Activities</th>
-                <th class="table_head">Actions</th>
+                <th class="table_head">Details</th>
               </tr>
               </thead>
               <tbody>
