--- a/templates/counselor/set_schedule.html
+++ b/templates/counselor/set_schedule.html
@@ -3,7 +3,9 @@
 {% block title %} 
 Set Schedule
 {% endblock %} 
-
+<style>
+    
+</style>
 {% block content %} 
     <form  method = "POST" action="">
 
