--- a/templates/teacher/detailNotif.html
+++ b/templates/teacher/detailNotif.html
@@ -320,7 +320,6 @@ justify-content: center;
 
 .buttonF {
   position: fixed;
-
 width: 100%;
 min-width: 1320px;
 height: 60px;
@@ -329,7 +328,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #000;
+color: #fff;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
