--- a/templates/teacher/list_referred_students.html
+++ b/templates/teacher/list_referred_students.html
@@ -141,7 +141,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #000;
+color: #fff;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
@@ -197,6 +197,10 @@ text-shadow: 1px 1px 1px #fff;
     tr:hover {
           background-color: #E6E4E4;
         }
+#id_filter_choice{
+    height: 3vh;
+    width: fit-content;
+}
 
 
 </style>
