--- a/templates/teacher/notification.html
+++ b/templates/teacher/notification.html
@@ -177,7 +177,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #000;
+color: #fff;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
