--- a/templates/teacher/refer_a_student.html
+++ b/templates/teacher/refer_a_student.html
@@ -264,7 +264,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #000;
+color: #fff;
 background-color: #4863A0;
 border: none;
 border-radius: 45px;
