--- a/templates/counselor/counselor_home.html
+++ b/templates/counselor/counselor_home.html
@@ -822,12 +822,7 @@ margin-left: 100px; */
        flex-wrap:wrap-reverse;">
  <div style="margin: auto; float: center; line-height: 30px;" >
   <p><h4>
-    Counseling is bahog baba ang counselor pero  dapat antuson nimo
-    In Counseling, mangamatay mos kabahog baba and thats awful <br>
-    pero bahala na oy raw hahahaha potangina pero bahala na oy raw hahahaha potangina<br>
-    pero bahala na oy raw hahahaha potangina <br>
-    E.g. 
-  <i> <b>Upload School Offices</b> first, then follow the rest.</i>
+    Put something here!
   </h4></p>
 </div>
             <img style="min-width: 700px;
