--- a/templates/counselor/notification.html
+++ b/templates/counselor/notification.html
@@ -173,7 +173,7 @@ font-size: 15px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #000;
+color: #fff;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
@@ -183,7 +183,6 @@ cursor: pointer;
 outline: none;
 }
 .fac{
-
 display: flex;
 align-items: center;
 justify-content: center;
@@ -192,7 +191,6 @@ justify-content: center;
 
 .buttonF {
   position: fixed;
-
 width: 100%;
 min-width: 1320px;
 height: 60px;
@@ -201,7 +199,7 @@ font-size: 16px;
 text-transform: uppercase;
 letter-spacing: 2.5px;
 font-weight: 600;
-color: #000;
+color: #fff;
 background-color: #d8c090;
 border: none;
 border-radius: 8px;
