--- a/templates/counselor/pending_students.html
+++ b/templates/counselor/pending_students.html
@@ -39,7 +39,7 @@ Pending Referred Students
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 600;
-  color: #000;
+  color: #fff;
   background-color: #d8c090;
   border: none;
   border-radius: 8px;
