--- a/templates/counselor/schedule_information.html
+++ b/templates/counselor/schedule_information.html
@@ -28,7 +28,6 @@ Schedule Information
   }
   
   #box {
-  
     background: #f4f4f4;
     height: 400px; 
     padding: 15px;
@@ -36,18 +35,210 @@ Schedule Information
     text-align: justify;
     border: 2px solid black;
     border-radius: 15px;
-    box-shadow:
-      5 90px 50px rgba(0, 0, 0, 0.07);
-    min-width: 550px;
+    box-shadow: 5 90px 50px rgba(0, 0, 0, 0.07);
+    min-width: 90vw;
     min-height: 200px;
-
-  width: 100px;
-  text-overflow: ellipsis; 
-margin-left: 70px;
+    width: 100px;
+    text-overflow: ellipsis; 
+    align-items: left;
 
 }
 
+  .table-head{
+    
+      background: #E5E4E2;
+      box-shadow: none;
+      color: #fff;
+      font-weight: 600;
+      line-height: 5px;
+        box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+        width: 500px;
+        margin: auto;
+        border-radius: 20px;
+  }
+  .table-head .table-cell{
+      border-right: none;
+  }
+  .table-cell{
+      display: table-cell;
+      width: 20%;
+      text-align: center;
+      padding: 4px 0;
+      border-right: 1px solid #838996;
+      vertical-align: middle;
+  }
+  .first-cell{
+      text-align: left;
+      padding-left: 10px;
+      width: 8%;
+  }
+  .last-cell{
+      border-right: none;
+      width: 15px;
+  }
+  /* a{
+      textdecoration: none;
+      color: #555;
+  } */
+  p{
+    font-size: 17px;
+    color: black;
+  }
+  .listTitle{
+    font-size: 20px;
+    text-align: center;
+  }
+  @media only screen and (max-width: 600px) {
+    .table-row {
+      font-size: 11px;
+      margin: auto;
+    }
+  }
+  .trow-list{
+        display:inline-block;
+      width: 70%;
+     
+      font-family: sans-serif;
+      background: transparent;
+      padding: 10px 0;
+      margin: auto;
+   
+  
+  
+  }
+  .modal1{
+    font-size: 21px;
+    font-weight: 300;
+    text-align: left;
  
+  }
+  .modal2{
+    font-size: 20px;
+    text-align: left;
+    line-height: 25px;
+  }
+  div.item {
+  
+      vertical-align: auto;
+      display: inline-block;
+  
+      text-align: center;
+  
+      width: 120px;
+  }
+  
+  .caption {
+  
+      display: block;
+  }
+  .item{
+    width:200px;
+    text-align:center;
+    display:block;
+    background-color: transparent;
+    border: 1px solid transparent;
+    margin-right: 10px;
+    margin-bottom: 1px;
+    float:left;
+  }
+  
+  #index-gallery{
+    width:465px;
+  }
+
+	.form_container {
+		margin-top: 20px;
+	}
+
+	#form-title {
+		color: #fff;
+
+	}
+
+	.login_btn {
+		width: 100%;
+		background: #48444c!important;
+		color: white !important;
+	}
+
+	.login_btn:focus {
+		box-shadow: none !important;
+		outline: 0px !important;
+	}
+
+	.login_container {
+		padding: 0 2rem;
+	}
+
+  /* <--------- FOR BUTTON SA FEEDBAK ----->  */
+  .table-head1{
+    
+    background:  #d8c090;
+    box-shadow: none;
+    color: #fff;
+    font-weight: 600;
+    line-height: 1px;
+      box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
+      width: 300px;
+      margin-left: 20px;
+      border-radius: 20px;
+}
+.table-head1 .table-cell1{
+    border-right: none;
+}
+.table-cell1{
+    display: table-cell;
+   
+}
+.first-cell1{
+    text-align: left;
+    padding-left: 10px;
+    width: 8%;
+}
+.buttons{
+  width: 200px;
+  height: auto;
+  border: 5em;
+  cursor: pointer;
+  outline: none;
+  font-size: 16px;
+  -webkit-transform: translate(0);
+  transform: translate(0);
+  background-image: linear-gradient(45deg, #98b4ac, #d8c090);
+  padding: 0.7em 2em;
+  border-radius: 65px;
+  box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
+  -webkit-transition: box-shadow 0.25s;
+  transition: box-shadow 0.25s;
+  color: white;
+}
+.buttons .text {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(45deg, #d8c090, #98b4ac);
+}
+
+.buttons:after {
+  content: "";
+  border-radius: 18px;
+  position: absolute;
+  margin: 4px;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+  background: #E5E4E2;
+}
+
+.buttons:hover {
+  background-image: linear-gradient(-45deg, #98b4ac, #d8c090);
+  box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
+}
+
+.buttons:hover .text {
+  background-image: linear-gradient(-45deg, #d8c090, #98b4ac);
+}
 .Pbox{
   font-size: 19px;
   line-height: 30px;
@@ -72,9 +263,8 @@ margin-left: 70px;
   
 }
 .rowText{
-  font-size: 20px;
-
-  margin: 25px;
+  font-size: 25px;
+  margin: auto;
 }
 .image{
   max-width: 320px;
@@ -121,6 +311,33 @@ margin:0 auto;
 form.cleanForm p {
 margin-bottom:15px;
 }
+.fac{
+
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonF {
+  position: fixed;
+width: 100%;
+min-width: 1320px;
+height: 60px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #d8c090;
+border: none;
+border-radius: 8px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+}
 .card1 {
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -141,6 +358,10 @@ margin-bottom:15px;
   .card1{
     width: 70%;
   }
+      .box{
+      display: flex;
+      flex-direction: column;
+    }
 }
 .wrap {
   height: 100%;
@@ -175,86 +396,76 @@ margin-bottom:15px;
   color: #fff;
   transform: translateY(-7px);
 }
+.schedule_appointment{
+align-items: center;
+display: inline-block;
+}
+.schedule_title{
+font-size: 23px;
+}
+.schedule_information{
+float: left;
+}
+.students_info{
+color: black; font-size: 22px;
+text-align: justify; margin-left: 50px;
+line-height: 3rem;
+}
 
- .fac{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-  }
-  
-  .buttonF {
-    position: fixed;
-  width: 100%;
-  min-width: 1320px;
-  height: 60px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 15px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  font-weight: 600;
-  color: #fff;
-  background-color: #d8c090;
-  border: none;
-  border-radius: 8px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
-    }
+
 </style>
-
+<br>
         <div class="fac">
           <button type="submit" class="buttonF">Counseling Information</button>
         </div> 
 <br> <br>
 {% if not object.behavior_problem %}
 
-<div class="card1">
-  <form action="#" class="cleanForm" method="POST">
-    <br>
-             <div style="text-align: center">
-               <h3 style="text-align: justify; margin-left: 16px; font-size: 20px;"><i>Schedule Information</i></h3>
-          <br>
-                  <h3 style="text-align: justify; margin-left: 50px;"><p style="color: black; font-size: 18px;">Students Name: &nbsp;</b>{{object.lastname}}, {{object.firstname}}</p></h3>
-                 <h3 style="text-align: justify; margin-left: 50px;"><p style="color: black; font-size: 18px;">Degree Program: &nbsp;</b>{{object.degree_program}}</p></h3>  
-
-    <p class="rowText">
+                     <div class="schedule_appointment">
+              <div class="schedule_title"> <h3><i>Schedule Information</i></h3></div>
+               <br> <br>
+<div class="schedule_information">
+  <div>
+                        <h3 class="students_info">Students Name: &nbsp;</b>{{object.lastname}}, {{object.firstname}}</h3>
+                 <h3 class="students_info">Degree Program: &nbsp;</b>{{object.degree_program}}</h3>  
+  </div>
+  <br> <br>
+      <p class="rowText">
         You have an appointment with <b> {{object.lastname}}.</b></b> 
         The Session starts at <b>{{object.start_time}}</b> and ends at <b>{{object.end_time}}</b> on <b>{{object.date}} </b> <br>
       
-      <br>
-      <i>With the Reasons stated below:</i>
+       <br>
+     <br>       <i>With the Reasons stated below:</i><br>
+     <br>
     <div id="box">
       <li class="Pbox" style="text-align: justify; margin-left:8px;"><b>{{object.reasons}}</b></li>
     </div>
     </p>
-    </div>    
-</form>  
 </div>
+    </div>
 {% else %}
-<div class="card1">
-  <form action="#" class="cleanForm" method="POST">
-    <br>
-             <div style="text-align: center">
-               <h3 style="text-align: justify; margin-left: 16px; font-size: 20px;"><i>Schedule Information</i></h3>
-          <br>
-                  <h3 style="text-align: justify; margin-left: 50px;"><p style="color: black; font-size: 18px;">Students Name: &nbsp;</b>{{object.lastname}}, {{object.firstname}}</p></h3>
-                 <h3 style="text-align: justify; margin-left: 50px;"><p style="color: black; font-size: 18px;">Degree Program: &nbsp;</b>{{object.degree_program}}</p></h3>  
-
-    <p class="rowText">
-        You have an appointment with <b> {{object.lastname}}</b> due to as having a behavior problem of <b>{{object.behavior_problem | title}}.</b> 
+                     <div class="schedule_appointment">
+              <div class="schedule_title"> <h3><i>Schedule Information</i></h3></div>
+               <br> <br>
+<div class="schedule_information">
+  <div>
+                        <h3 class="students_info">Students Name: &nbsp;</b>{{object.lastname}}, {{object.firstname}}</h3>
+                 <h3 class="students_info">Degree Program: &nbsp;</b>{{object.degree_program}}</h3>  
+  </div>
+  <br> <br>
+      <p class="rowText">
+            You have an appointment with <b> {{object.lastname}}</b> due to as having a behavior problem of <b>{{object.behavior_problem | title}}.</b> 
         The Session starts at <b>{{object.start_time}}</b> and ends at <b>{{object.end_time}}</b> on <b>{{object.date}} </b> <br> 
       
-      <br>
-      <i>With the Reasons stated below:</i>
+       <br>
+     <br> <i>With the Reasons stated below:</i><br>
+     <br>
     <div id="box">
       <li class="Pbox" style="text-align: justify; margin-left:8px;"><b>{{object.reasons}}</b></li>
     </div>
     </p>
-    </div>    
-</form>  
 </div>
+    </div>
 
 {% endif %}
 {% endblock %}
