--- a/templates/counselor/view_feedback.html
+++ b/templates/counselor/view_feedback.html
@@ -40,7 +40,7 @@ View Feedback
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 600;
-  color: #000;
+  color: #fff;
   background-color: #d8c090;
   border: none;
   border-radius: 8px;
