--- a/templates/teacher/list_students.html
+++ b/templates/teacher/list_students.html
@@ -145,7 +145,7 @@ td.text-right {
 }
 .button {
   margin: 0 auto;
-  width: 140px;
+  width: 9vw;
   height: 30px;
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
@@ -167,6 +167,25 @@ td.text-right {
   box-shadow: 0px 15px 20px #C9C0BB;
   color: #fff;
   transform: translateY(-7px);
+}
+.buttonF {
+  position: fixed;
+width: 100%;
+min-width: 1320px;
+height: 60px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #d8c090;
+border: none;
+border-radius: 8px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
 }
 
 
